fix popup z-index, add shadow

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -3,7 +3,7 @@
   background-color: var(--color-theme);
   //padding: 12px 0;
   color: var(--color-white);
-  z-index: 10;
+  z-index: 1000;
     &-panel{
       display: flex;
       align-items: center;
