--- a/src/sass/components/_popup.scss
+++ b/src/sass/components/_popup.scss
@@ -25,6 +25,7 @@
       padding: 36px 26px 36px 21px;
       overflow-y: auto;
       overflow-x: hidden;
+      filter: drop-shadow(0px 2px 3px rgba(0, 0, 0, 0.2));
         &-header{
           width: 100%;
           display: block;
